# gtsam

./: CMakeLists.txt
doc/Code/: LocalizationFactor.cpp
examples/: CMakeLists.txt  CameraResectioning.cpp  ISAM2Example_SmartFactor.cpp  LocalizationExample.cpp  Pose3Localization.cpp  Pose3SLAMExample_changeKeys.cpp  Pose3SLAMExample_g2o.cpp  Pose3SLAMExample_initializePose3Chordal.cpp  Pose3SLAMExample_initializePose3Gradient.cpp  SFMExample_SmartFactor.cpp  SolverComparer.cpp  TriangulationLOSTExample.cpp
gtsam/base/: CMakeLists.txt  Lie.h  Matrix.h  OptionalJacobian.h  ProductLieGroup.h  TestableAssertions.h  ThreadsafeException.h  Value.h  Vector.cpp  VectorSpace.h  numericalDerivative.h  optional_test.cpp  std_optional_serialization.h  timing.cpp
gtsam/base/tests/: testMatrix.cpp  testOptionalJacobian.cpp
gtsam/basis/: Basis.h
gtsam/discrete/: DecisionTree-inl.h  DecisionTreeFactor.cpp  DecisionTreeFactor.h  DiscreteBayesNet.cpp  DiscreteBayesNet.h  DiscreteConditional.cpp  DiscreteConditional.h  DiscreteFactor.h  DiscreteFactorGraph.h  SignatureParser.cpp
gtsam/geometry/: BearingRange.h  Cal3.h  Cal3Bundler.cpp  Cal3Bundler.h  Cal3DS2_Base.h  Cal3Fisheye.cpp  Cal3Fisheye.h  Rot2.h  (+37 more)
gtsam_unstable/: CMakeLists.txt  gtsam_unstable.i
tests/: simulated2D.h  simulated2DConstraints.h  simulated2DOriented.h  simulated3D.h  smallExample.h  testExpressionFactor.cpp  testExtendedKalmanFilter.cpp  testGaussianISAM2.cpp  testNonlinearFactor.cpp  testSimulated3D.cpp
timing/: timeCameraExpression.cpp  timeLago.cpp  timePinholeCamera.cpp  timePose2.cpp  timeRot2.cpp
(+294 files in other folders)
